# DBMS-cpp

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Database_Constants.hpp  Database_Types.hpp  ProgrammingInterface.cpp  ProgrammingInterface.hpp  Table.cpp  Table.hpp  Typelist.hpp  design.txt  fixedString.hpp  lib.cpp  main.cpp  serialization.hpp
source/BPTree/: BPTree.cpp  BPTree.hpp
source/CustomTypes/: Bool.hpp  fixedString.cpp  fixedString.hpp
source/Parser/: Parser.cpp  Parser.hpp
test/: CMakeLists.txt
test/source/: DBMS_test.cpp
